cleaned CSS for Arabic RTL orientation

--- a/less/forum/DiscussionListItem.less
+++ b/less/forum/DiscussionListItem.less
@@ -376,3 +376,40 @@
     }
   }
 }
+
+.DiscussionListItem-content {
+    margin-bottom: -6px !important;
+	border-top: 1px solid #9a9a9a !important;
+}
+.DiscussionListItem-author {
+    margin-top: 1px !important;
+}
+
+.DiscussionListItem-author .Avatar {
+    width: 89px !important;
+    height: 89px !important;
+
+}
+
+.DiscussionListItem-main {
+	margin-left: -82px;
+    padding-left: 92px;
+    padding-bottom: 37px !important;
+    padding-top: 13px !important;
+
+}
+
+.DiscussionListItem-count {
+	margin-top: -76px !important;
+}
+
+.DiscussionListItem-controls {
+	top: 25px !important;
+}
+
+.DiscussionListItem-title {
+	margin-right: 8px !important;
+}
+.DiscussionListItem-info {
+	padding-right: 11px !important;
+}
